--- a/layouts/partials/head/scripts.html
+++ b/layouts/partials/head/scripts.html
@@ -28,6 +28,10 @@
 <script defer data-domain="{{ .Site.Params.plausible_domain }}" src="{{ .Site.Params.plausible_script }}"></script>
 {{ end }}
 
+{{ if .Site.Params.cloudflare_analytics }}
+<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "{{ .Site.Params.cloudflare_token }}"}'></script>
+{{ end }}
+
 {{ if hugo.IsProduction -}}
   {{ template "_internal/google_analytics.html" . -}}
 {{ end -}}
