auto-scroll to content for content/blog pages

--- a/layouts/partials/head/scripts.html
+++ b/layouts/partials/head/scripts.html
@@ -1,7 +1,8 @@
 {{/* Personal/custom script for light/dark mode and tabs */}}
 {{ $js := slice
       (resources.Get "js/light_dark.js")
-      (resources.Get "js/tabs.js") }}
+      (resources.Get "js/tabs.js")
+      (resources.Get "js/mobile-scroll.js") }}
 
 {{/* Locally hosted code for KaTeX */}}
 {{ $js = $js | append
